# goose_dsp

./: .env  Cargo.toml  LICENSE  README.md  build.rs
src/: app.rs  goose_dsp.rs  main.rs
src/app/: file.rs  settings.rs  stream.rs  ui.rs  wav.rs  waveform.rs
src/app/dsp/: cabinet.rs  eq.rs  gate.rs  mod.rs  overdrive.rs  params.rs
src/echo/: Cargo.toml  echo.rs
src/file/: file.rs
src/goose_dsp_core/: mod.rs  overdrive.rs
