[package]
name = "goose_dsp"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = { version = "0.15.3", features = ["asio"] }
eframe = { version = "0.30.0", features = ["default_fonts"] }
egui_plot = "0.30.0"
rustfft = "6.2.0"
dasp = { version = "0.11.0", features = ["signal"] }
hound = "3.5.1"
rfd = "0.15.2"

[target.'cfg(target_os = "windows")'.build-dependencies]
asio-sys = "0.2.2"