[package]
name = "goose_dsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo"
path = "src/echo/echo.rs"

[[bin]]
name = "goose_dsp"
path = "src/main.rs"

[dependencies]
cpal = "0.15.3"
eframe = { version = "0.30.0", features = ["default_fonts"] }
egui_plot = "0.30.0"
egui_extras = { version = "0.30", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }
rustfft = "6.2.0"
hound = "3.5.1"
rfd = "0.15.2"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0"
egui_knob = "0.1.9"

[target.'cfg(target_os = "windows")'.dependencies]
cpal = { version = "0.15.3", features = ["asio"] }